# ziiWakeBreaker

./: CMakeLists.txt  HUDWindow.cpp  HUDWindow.h  NOTES.txt  README.txt  ZiiWakeBreakerApp.cpp  ZiiWakeBreakerApp.h  mainwindow.cpp  mainwindow.h  prebuild.sh  res_ids.h  resource.h
wakebreaker/: Base.h  Camera.cpp  Camera.h  Chest.cpp  Color4.h  Game.cpp  Game.h  Info.h  Math.cpp  Math.h  ModelManager.cpp  ModelManager.h  ParticleSystem.cpp  ParticleSystem.h  RaceCourse.cpp  RaceCourse.h  Racer.cpp  Racer.h  RenderData.h  RenderDataManager.h  RenderInstance.h  Renderer.cpp  Renderer.h  Seascape.cpp  Seascape.h  Texture.cpp  Texture.h  Vector3.h  background.txt  boat1.h  boat2.h  checkpoint.h  chesttex.h  description.txt  island1.h  island2.h  island3.h  libraries.txt  license.txt  main.cpp
wakebreaker/GLES/: egl.h  gl.h
wakebreaker/docs/: autodia.out.xml
